--- a/src/components/CalculateFirst/CalculateFirst.css
+++ b/src/components/CalculateFirst/CalculateFirst.css
@@ -12,7 +12,8 @@
     margin-bottom:30px;
 }
 .first-form>*{
-    margin:3%;
+    margin-bottom:3%;
+    margin-top:3%;
 }
 .first-btn{
     width:100%;
