[Add] utils폴더/ SEtNumberFormat 함수 생성

--- a/src/components/CalculateFirst/CalculateFirst.css
+++ b/src/components/CalculateFirst/CalculateFirst.css
@@ -9,7 +9,7 @@
 .first-title{
     font-size:30px;
     font-weight:700;
-    margin-bottom:30px;
+    padding-bottom:30px;
 }
 .first-form>*{
     margin-bottom:3%;
