--- a/src/components/CalculateSecond/CalculateSecondForm.css
+++ b/src/components/CalculateSecond/CalculateSecondForm.css
@@ -7,10 +7,14 @@
 }
 .rateInput {
   width: 45%;
-  padding: 10px 30px;
+  padding: 10px 25px;
   font-size: 15px;
   font-weight: 600;
   border: 2px solid #000;
+}
+.rateInput::placeholder {
+  font-size: 12px;
+  color: rgb(126, 126, 126);
 }
 .rateSelected {
   width: 45%;
